--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.26.0",
     "@types/three": "^0.171.0",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.15.0",
+    "lucide-react": "^0.469.0",
     "next": "^15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
